added seo text and optimized images

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="NPM , New popular motors is the best dealers in Colombo for all kind of motorcycle parts"
+    />
     <title>NPM | New Popular Motors</title>
     <link
       rel="icon"
@@ -37,7 +41,7 @@
         <a href="/index.html">
           <img
             src="assets/img/npm-logo.png"
-            alt=""
+            alt="NPM Colombo"
             srcset=""
             class="npm-logo"
           />
