--- a/pages/product-verified.html
+++ b/pages/product-verified.html
@@ -54,7 +54,6 @@
           height: 75vh;
         }
       }
-
     </style>
   </head>
   <body>
@@ -78,9 +77,9 @@
     </header>
     <section class="product-verified-img">
       <img
-        src="../assets/img/product-verified.png"
+        src="../assets/img/product-verified.webp"
         class="w-100 h-100"
-        alt=""
+        alt="Product Verified"
         srcset=""
         data-aos="fade-up"
         data-aos-duration="1000"
