fixed responsive issues

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
       <div class="container">
         <div class="row gap-3 gap-lg-0">
           <div class="col-lg-7">
-            <div class="w-lg-100 h-50">
+            <div class="w-lg-100 height-50">
               <div
-                class="h-100 card d-flex align-items-center flex-lg-row gap-lg-2 justify-content-center p-5"
+                class="h-100 card d-flex align-items-center flex-lg-row gap-lg-2 justify-content-center p-5 mb-3 mb-lg-0"
                 data-aos="fade-up"
                 data-aos-duration="1000"
               >
@@ -84,8 +84,8 @@
                 <span>customers</span>
               </div>
             </div>
-            <div class="row mt-2 mt-lg-4 h-50">
-              <div class="col-lg-4 h-100">
+            <div class="row mt-2 mt-lg-4 height-50">
+              <div class="col-lg-4 height-100">
                 <div
                   class="h-100 card d-flex align-items-center flex-column justify-content-center p-5 mb-3 mb-lg-0"
                   data-aos="fade-up"
@@ -96,7 +96,7 @@
                   <span>spots</span>
                 </div>
               </div>
-              <div class="col-lg-6 h-100">
+              <div class="col-lg-6 height-100">
                 <div
                   class="h-100 card d-flex align-items-center flex-column justify-content-stretch p-5"
                   data-aos="fade-up"
@@ -107,9 +107,9 @@
                   <span>brands trust us</span>
                 </div>
               </div>
-              <div class="col-lg-2 h-100">
+              <div class="col-lg-2 height-100">
                 <div
-                  class="h-100 card d-none d-lg-flex align-items-center h-100 flex-row gap-2 justify-content-center p-4"
+                  class="h-100 card d-none d-lg-flex align-items-center height-100 flex-row gap-2 justify-content-center p-4"
                   data-aos="fade-up"
                   data-aos-duration="1000"
                 >
@@ -124,7 +124,7 @@
             </div>
           </div>
           <div class="col-lg-5">
-            <div class="w-lg-100 h-50">
+            <div class="w-lg-100 height-50">
               <div
                 class="h-100 card d-flex align-items-center flex-column justify-content-center p-5 mb-3 mb-lg-0"
                 data-aos="fade-up"
@@ -135,7 +135,7 @@
                 <span>genuine</span>
               </div>
             </div>
-            <div class="w-lg-100 h-50 mt-4">
+            <div class="w-lg-100 height-50 mt-4">
               <div
                 class="h-100 card d-flex align-items-center flex-column justify-content-center p-5 mb-3 mb-lg-0"
                 data-aos="fade-up"
@@ -152,7 +152,7 @@
     </section>
 
     <section
-      class="highlight-banner d-flex justify-content-center flex-column gap-5 mb-5 py-5 py-md-0"
+      class="highlight-banner d-flex justify-content-center flex-column gap-5 mb-5 py-5 py-md-0 mt-5 mt-lg-0"
     >
       <div class="container">
         <h1 data-aos="fade-up" data-aos-duration="1000">
