responsive issue fixed

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               </div>
               <div class="col-lg-6 height-100">
                 <div
-                  class="h-100 card d-flex align-items-center flex-column justify-content-stretch p-5"
+                  class="h-100 card d-flex align-items-center flex-column justify-content-stretch p-5 mb-1 mb-lg-0"
                   data-aos="fade-up"
                   data-aos-duration="1000"
                 >
