--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
       content="NPM , New popular motors is the best dealers in Colombo for all kind of motorcycle parts"
     />
     <title>NPM | New Popular Motors</title>
-    <link
-      rel="icon"
-      href="assets/img/npm-logo.png"
-      type="image/png"
-      sizes="16x16"
-    />
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
