added brand logos

--- a/pages/product-verified.html
+++ b/pages/product-verified.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NPM | Product Verified</title>
-    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -94,25 +94,6 @@
         </button>
       </a>
     </section>
-
-    <footer class="fixed-bottom">
-      <div
-        class="p-3 px-5 d-md-flex justify-content-between align-items-center"
-      >
-        <a href="/index.html">
-          <img
-            src="../assets/img/npm-logo.png"
-            alt=""
-            srcset=""
-            class="npm-logo"
-          />
-        </a>
-        <p class="">
-          Copyright © 2024
-          <a href="/index.html" class="text-light">New Popular Motors</a>
-        </p>
-      </div>
-    </footer>
     <!-- AOS -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
