--- a/pages/product-verified.html
+++ b/pages/product-verified.html
@@ -65,7 +65,7 @@
           />
         </a>
 
-        <a href="tel:0777714253">
+        <a href=https://wa.me/+94777714253>
           <button class="btn btn-primary btn-sm">Contact us</button>
         </a>
       </nav>
