--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </nav>
     </header>
 
-    <section class="hero w-100 text-center py-5 mb-5">
+    <section class="hero w-100 text-center py-5">
       <div class="container py-5">
         <h1 class="fw-bold mt-5" data-aos="fade-up" data-aos-duration="1000">
           Dealer’s in all kind of motorcycle parts
@@ -65,25 +65,31 @@
       </div>
     </section>
 
-    <section class="marquee-slider mt-lg-3 mb-5 mb-lg-0">
-      <marquee behavior="scroll" direction="left" scrollamount="18">
-        <div class="d-flex gap-5">
-          <img src="assets/img/brand-img/Bando.png  " alt="" class="mx-2 mx-md-5">
-          <img src="assets/img/brand-img/ASK.svg" alt="" class="mx-2 mx-md-5">
-          <img src="assets/img/brand-img/Champion-logo.jpg" alt="" class="mx-2 mx-md-5">
-          <img src="assets/img/brand-img/fcc.png" alt="" class="mx-2 mx-md-5">
-          <img src="assets/img/brand-img/fiem cropped.png" alt="" class="mx-2 mx-md-5">
-          <img src="assets/img/brand-img/Lucas TVS.png" alt="" class="mx-2 mx-md-5">
-          <img src="assets/img/brand-img/Osram.png" alt="" class="mx-2 mx-md-5">
-          <img src="assets/img/brand-img/rolon.png" alt="" class="mx-2 mx-md-5">
-          <img src="assets/img/brand-img/spark-minda-inner-logo.png" alt="" class="mx-2 mx-md-5">
-          <img src="assets/img/brand-img/Uno Minda Logo.png" alt="" class="mx-2 mx-md-5">
-          <img src="assets/img/brand-img/Varroc-Logo.png" alt="" class="mx-2 mx-md-5">
+    <section class="trusted-brands py-5">
+      <div class="container py-2 mb-5" data-aos="fade-up" data-aos-duration="1000">
+        <!-- <h2 class="pb-3">
+          Brands trusted by NPM
+        </h2> -->
+        <div class="row mt-md-5">
+          <div class="col-6 col-md-2 mt-5 mt-md-0"><img src="assets/img/brand-img/Champion-logo.jpg" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-2 mt-5 mt-md-0"> <img src="assets/img/brand-img/Osram.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-2 mt-5 mt-md-0"><img src="assets/img/brand-img/fcc.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-2 mt-5 mt-md-0"><img src="assets/img/brand-img/spark-minda-inner-logo.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-2 mt-5 mt-md-0"><img src="assets/img/brand-img/Varroc-Logo.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-2 mt-5 mt-md-0"><img src="assets/img/brand-img/Lucas TVS.png" alt="" class="d-block mx-auto"></div>
         </div>
-      </marquee>
+        <div class="row mt-md-5 pt-md-3">
+          <div class="col-6 col-md-2 mt-5 mt-md-0"> <img src="assets/img/brand-img/Bando.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-3 mt-5 mt-md-0"><img src="assets/img/brand-img/fiem cropped.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-2 mt-5 mt-md-0"><img src="assets/img/brand-img/rolon.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-3 mt-5 mt-md-0"><img src="assets/img/brand-img/Uno Minda Logo.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-12 col-md-2 mt-5 mt-md-0"><img src="assets/img/brand-img/ASK.svg" alt="" class="d-block mx-auto"></div>
+        </div>
+      </div>
     </section>
 
-    <section class="why-npm d-flex justify-content-center align-items-center mb-lg-5">
+
+    <section class="why-npm d-flex justify-content-center align-items-center mb-lg-3">
       <div class="container">
         <div class="row gap-3 gap-lg-0">
           <div class="col-lg-7">
@@ -166,7 +172,7 @@
     </section>
 
     <section
-      class="highlight-banner d-flex justify-content-center flex-column gap-5 mb-5 py-5 py-md-0 mt-5 mt-lg-0"
+      class="highlight-banner d-flex justify-content-center flex-column gap-5 py-5 py-md-0 mt-5 mt-lg-0"
     >
       <div class="container">
         <h1 data-aos="fade-up" data-aos-duration="1000">
@@ -332,6 +338,9 @@
         </div>
       </div>
     </section>
+
+
+
 
     <footer class="">
       <div class="p-5 d-md-flex justify-content-between align-items-center">
