--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </section>
 
 
-    <section class="why-npm d-flex justify-content-center align-items-center mb-lg-3">
+    <section class="why-npm d-flex justify-content-center align-items-center">
       <div class="container">
         <div class="row gap-3 gap-lg-0">
           <div class="col-lg-7">
