updated brand icon size

--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
           Brands trusted by NPM
         </h2> -->
         <div class="row mt-md-5">
-          <div class="col-6 col-md-2 mt-5 mt-md-0"><img src="assets/img/brand-img/Champion-logo.jpg" alt="" class="d-block mx-auto"></div>
-          <div class="col-6 col-md-2 mt-5 mt-md-0"> <img src="assets/img/brand-img/Osram.png" alt="" class="d-block mx-auto"></div>
-          <div class="col-6 col-md-2 mt-5 mt-md-0"><img src="assets/img/brand-img/fcc.png" alt="" class="d-block mx-auto"></div>
-          <div class="col-6 col-md-2 mt-5 mt-md-0"><img src="assets/img/brand-img/spark-minda-inner-logo.png" alt="" class="d-block mx-auto"></div>
-          <div class="col-6 col-md-2 mt-5 mt-md-0"><img src="assets/img/brand-img/Varroc-Logo.png" alt="" class="d-block mx-auto"></div>
-          <div class="col-6 col-md-2 mt-5 mt-md-0"><img src="assets/img/brand-img/Lucas TVS.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-4 col-lg-2 mt-5 mt-lg-0"><img src="assets/img/brand-img/Champion-logo.jpg" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-4 col-lg-2 mt-5 mt-lg-0"> <img src="assets/img/brand-img/Osram.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-4 col-lg-2 mt-5 mt-lg-0"><img src="assets/img/brand-img/fcc.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-4 col-lg-2 mt-5 mt-lg-0"><img src="assets/img/brand-img/spark-minda-inner-logo.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-4 col-lg-2 mt-5 mt-lg-0"><img src="assets/img/brand-img/Varroc-Logo.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-4 col-lg-2 mt-5 mt-lg-0"><img src="assets/img/brand-img/Lucas TVS.png" alt="" class="d-block mx-auto"></div>
         </div>
-        <div class="row mt-md-5 pt-md-3">
-          <div class="col-6 col-md-2 mt-5 mt-md-0"> <img src="assets/img/brand-img/Bando.png" alt="" class="d-block mx-auto"></div>
-          <div class="col-6 col-md-3 mt-5 mt-md-0"><img src="assets/img/brand-img/fiem cropped.png" alt="" class="d-block mx-auto"></div>
-          <div class="col-6 col-md-2 mt-5 mt-md-0"><img src="assets/img/brand-img/rolon.png" alt="" class="d-block mx-auto"></div>
-          <div class="col-6 col-md-3 mt-5 mt-md-0"><img src="assets/img/brand-img/Uno Minda Logo.png" alt="" class="d-block mx-auto"></div>
-          <div class="col-12 col-md-2 mt-5 mt-md-0"><img src="assets/img/brand-img/ASK.svg" alt="" class="d-block mx-auto"></div>
+        <div class="row mt-lg-5 pt-lg-3">
+          <div class="col-6 col-md-4 col-lg-2 mt-5 mt-lg-0"> <img src="assets/img/brand-img/Bando.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-4 col-lg-3 mt-5 mt-lg-0"><img src="assets/img/brand-img/fiem cropped.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-4 col-lg-2 mt-5 mt-lg-0"><img src="assets/img/brand-img/rolon.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-6 col-md-4 col-lg-3 mt-5 mt-lg-0"><img src="assets/img/brand-img/Uno Minda Logo.png" alt="" class="d-block mx-auto"></div>
+          <div class="col-12 col-md-4 col-lg-2 mt-5 mt-lg-0"><img src="assets/img/brand-img/ASK.svg" alt="" class="d-block mx-auto"></div>
         </div>
       </div>
     </section>
