--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
       content="NPM , New popular motors is the best dealers in Colombo for all kind of motorcycle parts"
     />
     <title>NPM | New Popular Motors</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon//favicon-16x16.png">
+    <link rel="manifest" href="assets/img/favicon//site.webmanifest">
+    <link rel="mask-icon" href="assets/img/favicon//safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
